# data-pipelien-demo

./: README.md
04_Data_pipeline_dev/: docker-compose.yml  (+1 more)
04_Data_pipeline_dev/notebooks/data-platform-00/: README.md  pyproject.toml  select_table.py  session_store.db
04_Data_pipeline_dev/notebooks/data-platform-00/conf/base/: catalog_integration_01.yml  catalog_landing_01.yml  parameters_landing_01.yml  parameters_staging_01.yml
04_Data_pipeline_dev/notebooks/data-platform-00/conf/local/: credentials.yml
04_Data_pipeline_dev/notebooks/data-platform-00/notebooks/: catalog.yml  data_platform_00.ipynb  data_platform_01.ipynb  kedro-viz.ipynb  test_case_00.ipynb
04_Data_pipeline_dev/notebooks/data-platform-00/notebooks/data_lib/: Monad.py  Monad_modi.py  Monad_package.py  landing_dsm.py  master.yaml
04_Data_pipeline_dev/notebooks/data-platform-00/notebooks/dataset/: master.parquet  trade_view_registration_case_for_prince.parquet
04_Data_pipeline_dev/notebooks/data-platform-00/notebooks/other_notebook/: clean-master-org.ipynb  test_case_01.ipynb  test_case_02-Copy1.ipynb  test_case_02.ipynb  test_validate.ipynb  yml4.ipynb
04_Data_pipeline_dev/notebooks/data-platform-00/src/data_platform_00/: __init__.py  __main__.py  pipeline_registry.py
04_Data_pipeline_dev/notebooks/data-platform-00/src/data_platform_00/pipelines/landing_01/: __init__.py  nodes.py  pipeline.py
04_Data_pipeline_dev/notebooks/data-platform-00/tests/pipelines/landing_01/: test_pipeline.py
04_Data_pipeline_dev/notebooks/data-platform-00/tests/pipelines/staging_01/: test_pipeline.py
(+24 files in other folders)
