[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "data_platform_00"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
data-platform-00 = "data_platform_00.__main__:main"

[tool.kedro]
package_name = "data_platform_00"
project_name = "data_platform_00"
kedro_init_version = "0.19.8"
tools = [ "Kedro Viz",]
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.version]
attr = "data_platform_00.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false

[tool.kedro_telemetry]
project_id = "d0ac36c4dc8c49739321e001cdf8c55b"
